<resources>
    <string name="app_name">GarbageCollections</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--User drawer-->
    <string name="menu_home">Home</string>
    <string name="menu_schedules">Schedules</string>
    <string name="menu_map">Map</string>


    <!--Admin drawer-->
    <string name="admin_menu_home">Home</string>
    <string name="menu_admin_vehicle">Vehicle</string>
    <string name="menu_admin_data_report">Data Report</string>
    <string name="menu_admin_notifications">Notifications</string>
    <string name="menu_admin_users">User Manage</string>

    <!--Driver drawer-->
    <string name="menu_menu_home">Home</string>

    <string name="delete_vehicle">Delete Vehicle</string>
    <string name="feedback_portal">Feedback Portal</string>
    <string name="recycling_information">RECYCLING INFORMATION</string>
    <string name="data_management">Data Management</string>
    <string name="delete_drivers">Delete Drivers</string>
    <string name="update_notification">Update notification</string>
    <string name="todo">TODO</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="admin_name">Admin Name</string>
    <string name="admin_login">ADMIN LOGIN</string>
    <string name="admin_singup">ADMIN SINGUP</string>
    <string name="user_login">USER LOGIN</string>
    <string name="title_activity_admin_drawer">AdminDrawerActivity</string>
    <string name="title_activity_driver_drawer">DriverDrawerActivity</string>
    <string name="username">Username</string>
    <string name="user_singup">USER SINGUP</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="users_register">User Register</string>
    <string name="write_your_feedback_here">write your feedback here</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="save_changes">SAVE CHANGES</string>


</resources>