<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.admin.AdminLogin">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="345dp"
        android:layout_height="565dp"
        android:orientation="vertical"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ExtraText">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:gravity="center"
            android:text="@string/admin_login"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username"
            style="@style/parent"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:paddingTop="16dp"
            android:text="@string/admin_name"
            android:autofillHints=""
            android:inputType="text"
            tools:ignore="LabelFor" />



        <EditText
            android:id="@+id/editpassword"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <TextView
            style="@style/viewParent"
            android:layout_width="164dp"
            android:layout_height="23dp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:minHeight="48dp"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="14sp" />



        <TextView
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:minHeight="48dp"
            android:onClick="viewRegisterClicked"
            android:text="@string/login_signup_hint"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="117dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151"
        app:srcCompat="@drawable/clean_for_green"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>