<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.user.UserFeedback">

    <EditText
        android:id="@+id/feed_back_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:hint="@string/username"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/feed_back_msg"
        android:hint="@string/write_your_feedback_here"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="VisualLintTextFieldSize" />
    <Button
        android:id="@+id/feed_back_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_feedback"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>