<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.user.UserRegister">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="412dp"
        android:layout_height="551dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

        <TextView
            android:id="@+id/edit1"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:gravity="center"
            android:text="@string/user_singup"
            android:textSize="34sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/reg_name"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:hint="@string/full_name"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.455"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.765"
            tools:ignore="LabelFor,MissingConstraints"/>

        <EditText
            android:id="@+id/reg_username"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:hint="@string/username"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.455"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.765"
            tools:ignore="LabelFor,MissingConstraints"/>


        <EditText
            android:id="@+id/reg_user_email"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.974"
            tools:ignore="LabelFor,MissingConstraints"
             />

        <EditText
            android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.455"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.8"
            tools:ignore="LabelFor,MissingConstraints"
            />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:backgroundTint="#174E1A"
            android:text="@string/register" />

        <TextView
            android:id="@+id/navigate_login"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:minHeight="48dp"
            android:text="@string/signup_login_hint"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/clean_for_green" />


</androidx.constraintlayout.widget.ConstraintLayout>