<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.admin.home.AdminHomeFragment">

    <Button
        android:id="@+id/button1"
        android:layout_width="388dp"
        android:layout_height="49dp"
        android:backgroundTint="#1C4E1E"
        android:text="@string/delete_vehicle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.445" />

    <Button
        android:id="@+id/button5"
        android:layout_width="391dp"
        android:layout_height="48dp"
        android:layout_marginTop="316dp"
        android:backgroundTint="#1C421E"
        android:text="@string/feedback_portal"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.121" />

    <Button
        android:id="@+id/button2"
        android:layout_width="380dp"
        android:layout_height="45dp"
        android:backgroundTint="#1C4E1E"
        android:text="@string/delete_drivers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.335" />

    <Button
        android:id="@+id/button3"
        android:layout_width="388dp"
        android:layout_height="47dp"
        android:backgroundTint="#1C4E1E"
        android:text="@string/update_notification"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/clean_for_green"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/button"
        android:layout_width="391dp"
        android:layout_height="48dp"
        android:layout_marginTop="316dp"
        android:backgroundTint="#1C421E"
        android:text="Notification scheduler"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.121" />

</androidx.constraintlayout.widget.ConstraintLayout>